[build-system]
requires = ["setuptools", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "pycodata"
dynamic = ["version"]
authors = [{name = "Milan Skocic", email = "milan.skocic@icloud.com"}]
description = "pycodata: CODATA constants for python."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "License :: OSI Approved :: MIT License"}
classifiers=["Development Status :: 5 - Production/Stable",
             "Intended Audience :: Science/Research",
             "License :: OSI Approved :: MIT License"]

[project.urls]
Documentation = "https://milanskocic.github.io/codata/index.html"
Source = "https://github.com/MilanSkocic/codata"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pycodata = ["libcodata.*", "libgfortran*", "libquadmath*", "libgcc_s*", "libwinpthread*"]
